feat(service): supported exe and api